The author that will be used for a commit is set as placeholder in the fields where a temporary author can be set in the commit dialog